# budget-buddy-v3-6th329

./: .gitignore  README.md
src/backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  tsconfig.json
src/backend/api_clients/: __init__.py  capital_one_client.py  gemini_client.py  gmail_client.py  google_sheets_client.py
src/backend/components/: __init__.py  budget_analyzer.py  insight_generator.py  report_distributor.py  savings_automator.py  transaction_categorizer.py  transaction_retriever.py
src/backend/config/: __init__.py  logging_config.py  settings.py
src/backend/deploy/: __init__.py
src/backend/deploy/terraform/: cloud_run.tf  cloud_scheduler.tf  iam.tf  main.tf  outputs.tf  secret_manager.tf  variables.tf
src/backend/docs/: api_integration.md  architecture.md  deployment.md  development.md  monitoring.md  security.md  testing.md
src/backend/models/: __init__.py  budget.py  category.py  report.py  transaction.py  transfer.py
src/backend/services/: __init__.py  authentication_service.py  data_transformation_service.py  error_handling_service.py  logging_service.py
src/backend/templates/: __init__.py  email_template.html
src/backend/templates/ai_prompts/: __init__.py  categorization_prompt.txt  insight_generation_prompt.txt
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/fixtures/: __init__.py  api_responses.py  budget.py  categories.py  transactions.py
src/backend/tests/integration/: __init__.py  test_analysis_flow.py  test_categorization_flow.py  test_end_to_end.py  test_reporting_flow.py  test_savings_flow.py  test_transaction_flow.py
src/backend/tests/mocks/: __init__.py  mock_capital_one_client.py  mock_gemini_client.py  mock_gmail_client.py  mock_google_sheets_client.py
src/backend/tests/unit/: __init__.py  (+10 more)
src/backend/utils/: __init__.py  date_utils.py  error_handlers.py  formatters.py  validation.py
(+208 files in other folders)
